force-app/main/default/objects/Int_Collateral_Party__c/Int_Collateral_Party__c.object-meta.xml
<CustomObject>
    <description>Int Junction Object for Collateral &amp; Party</description>
    <label>Int Collateral Party</label>
    <nameField>
        <displayFormat>CPI-{0000000000}</displayFormat>
        <label>Collateral Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>