force-app/main/default/objects/Int_Collateral_Party__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Party Name</description>
    <label>Party Name</label>
    <referenceTo>Int_Party__c</referenceTo>
    <relationshipLabel>Int Collaterals Parties</relationshipLabel>
    <relationshipName>Int_Collaterals_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>