force-app/main/default/objects/Int_Collateral_Party__c/fields/Party_Role_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Party_Role_Type_Code__c</fullName>
    <description>Party Role Type Code</description>
    <label>Party Role Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>