force-app/main/default/objects/Int_Collateral_Party__c/fields/Party_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Party_Source_System__c</fullName>
    <description>Party Source System</description>
    <label>Party Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>