force-app/main/default/objects/Int_Collateral_Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collateral_Source_System__c</columns>
    <columns>Collateral_Number__c</columns>
    <columns>Collateral_Type__c</columns>
    <columns>Party_Source_System__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Party_Role_Type_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>